<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/course"
        android:icon="@drawable/courses_icon"
        android:title="@string/course" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/navigation_menu_profile" />
    <!--
    <item
        android:id="@+id/log"
        android:icon="@drawable/icons8_historic_48"
        android:title="@string/navigation_menu_log" />
    -->
    <item
        android:id="@+id/forum"
        android:icon="@drawable/icons8_chat2_48"
        android:title="@string/navigation_menu_forum" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/icons8_chat_48"
        android:title="@string/navigation_menu_chat" />

    <item
        android:id="@+id/myspace"
        android:icon="@drawable/icons8_dossier_100"
        android:title="@string/navigation_menu_myspace" />

</menu>