<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentUpdateActivity"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="30dp"
                android:paddingTop="30dp">

                <TextView
                    android:id="@+id/msg_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#F81111"
                    android:textSize="14sp"
                    android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstname"
                    android:hint="@string/student_firstname"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastname"
                    android:hint="@string/student_lastname"
                    android:layout_marginBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_email"
                    android:id="@+id/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icons8_email"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_birthday"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp" />

                <DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"
                    android:layout_marginTop="-10dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_level"
                    android:textColor="#000"
                    android:textSize="14sp"/>

                <Spinner
                    android:id="@+id/student_level_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"/>

                <TextView
                    android:id="@+id/subsription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subscribe_title"
                    android:textColor="#000"
                    android:textSize="14sp"/>

                <Spinner
                    android:id="@+id/student_subscription_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login"
                    android:hint="@string/login_username"
                    android:layout_marginBottom="15dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/password"
                    android:hint="@string/login_password"
                    android:layout_marginBottom="15dp"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/save"
                    android:textColor="#fff"
                    android:background="@drawable/button_orange_round"/>

            </LinearLayout>
</ScrollView>

