<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_header"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="0dp"
    android:paddingRight="20dp"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/logo"
            android:elevation="5dp"
            android:padding="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            />

        <TextView
            android:id="@+id/user_name"
            android:textSize="25sp"
            android:text="Login"
            android:textColor="#ffffff"
            android:fontFamily="@font/antic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/user_photo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toRightOf="@id/user_photo"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="140dp">
        <!--
        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifresult"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/cool"

            />
        -->

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:text="@string/login_welcome"
            android:textColor="#000"
            android:textSize="24sp"
            android:transitionName="logo_text" />

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_continue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/login_msg_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#F81111"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/password_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="#00000000"
                android:elevation="0dp"
                android:text="@string/login_forget" />

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_red"
                android:text="@string/login_signin"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:background="@drawable/button_red"
                android:elevation="0dp"
                android:text="@string/login_singup"
                android:textColor="#fff"
                android:textStyle="bold"
                android:transitionName="trans_btn_signup"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>