<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileChooseActivity"
    android:orientation="vertical"
    android:padding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout"
        android:background="#fff">


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/user_photo"
            android:src="@drawable/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop" />


        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/header_rectangle"
            />

        <TextView
            android:id="@+id/user_name"
            android:textSize="22sp"
            android:text="@string/register_profile_choose"
            android:textColor="#ffffff"
            android:fontFamily="@font/antic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/user_photo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toRightOf="@id/user_photo"
            android:layout_marginTop="35dp"
            android:textStyle="bold"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="195dp"
            android:layout_height="195dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-185dp"
            android:clickable="true"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/icons8_user_orange_100" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="504dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="-85dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#ffffff">

            <Button
                android:id="@+id/student_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_red"
                android:drawableLeft="@drawable/icons8_etudiant_48"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="0dp"
                android:paddingEnd="40dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/register_profile_student"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/parent_btn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_green"
                android:drawableLeft="@drawable/icons8_father_48"
                android:gravity="center"
                android:paddingStart="40dp"
                android:paddingTop="0dp"
                android:paddingEnd="40dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/register_profile_parent"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:textStyle="bold" />


        </LinearLayout>
    </RelativeLayout>








</ScrollView>

